Allowing user to change the position of Compose area. Closes #19

--- a/background.html
+++ b/background.html
@@ -14,7 +14,8 @@ OptionsBackend = {
     max_cached_tweets: 30,
     url_shortener: 'bitly',
     name_attribute: 'name',
-    request_timeout: 6000
+    request_timeout: 6000,
+    compose_position: 'top'
   },
   cachedOptions: null,
   save: function(optionsMap) {
