--- a/options.html
+++ b/options.html
@@ -155,16 +155,25 @@ $(function() {
     <select name="url_shortener"></select>
   </fieldset>
 
-  <fieldset>
-    <legend>Advanced</legend>
+   <fieldset>
+    <legend>UI</legend>
     <label for="name_attribute">Name in tweets:</label>
     <select name="name_attribute">
       <option value="screen_name">Screen name (nickname)</option>
       <option value="name">Real name</option>
     </select>
+    <label for="compose_position">Compose area position:</label>
+    <select name="compose_position">
+      <option value="top">Top</option>
+      <option value="bottom">Bottom</option>
+    </select>
+
+  </fieldset>
+
+  <fieldset>
+    <legend>Advanced</legend>
     <label for="request_timeout">Request Timeout (ms):</label>
     <input type="text" name="request_timeout" validator="required,number,positive"><br>
-
   </fieldset>
 
   <br>
